final draft i hope

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Inform Us What Is your Favourite Knitted Garment
   <input class="text" type="email" id="email" placeholder="Enter Your Email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" required> </input>
  <br> 
   <label id="number-label">Shoe-Size</label><br>
-  <input class="text" type="number" id="number" placeholder="Enter your Sweater Size" minlength="0" maxlength="18" required></input>
+  <input class="text" type="number" id="number" placeholder="Enter your Sweater Size" min="0" max="18" required></input>
 </div>
   </div>
   <hr>
